Add title and changes to createGrid
createGrid to be fixed in next commit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container"></div>
+    <h3>Etch-A-Sketch</h3>
+    <div class="container">
+
+    </div>
 </body>
 </html>
