added button to reset grid
now will add functionality

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>Etch-A-Sketch</h3>
-    <div class="container">
-
-    </div>
+        <h3 class="title">Etch-A-Sketch</h3>
+        <div class="buttons">
+            <button class="reset-btn">Reset Grid</button>
+        </div>
+    
+    <div class="container"></div>
 </body>
 </html>
