--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="javascript.js" defer></script>
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>etch-a-sketch</title>
 </head>
 <body>
         <h3 class="title">Etch-A-Sketch</h3>
